Implementation of API structure
