# src/main/java/com/unitvectory/devicekeyregistry/controller/DeviceAliasResource.java
@@ -13,7 +13,13 @@
  */
 package com.unitvectory.devicekeyregistry.controller;
 
+import java.util.List;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import com.unitvectory.devicekeyregistry.mapper.DeviceRecordMapper;
+import com.unitvectory.devicekeyregistry.model.DeviceRecord;
+import com.unitvectory.devicekeyregistry.model.DevicesResponse;
 import com.unitvectory.devicekeyregistry.service.DeviceService;
 import lombok.AllArgsConstructor;
 
@@ -28,5 +34,10 @@ public class DeviceAliasResource {
 
     private DeviceService deviceService;
 
-
+    @GetMapping("/v1/alias/{deviceAlias}")
+    public DevicesResponse getDeviceAlias(@RequestParam("deviceAlias") String deviceAlias) {
+        List<DeviceRecord> records = this.deviceService.getDeviceAliases(deviceAlias);
+        return DevicesResponse.builder()
+                .devices(DeviceRecordMapper.INSTANCE.toDeviceResponseList(records)).build();
+    }
 }
