# src/main/java/com/unitvectory/devicekeyregistry/controller/DeviceResource.java
@@ -13,8 +13,16 @@
  */
 package com.unitvectory.devicekeyregistry.controller;
 
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
+import com.unitvectory.devicekeyregistry.mapper.DeviceRecordMapper;
+import com.unitvectory.devicekeyregistry.model.ActivateRequest;
+import com.unitvectory.devicekeyregistry.model.DeviceResponse;
 import com.unitvectory.devicekeyregistry.service.DeviceService;
+import com.unitvectory.jsonschema4springboot.ValidateJsonSchema;
+import com.unitvectory.jsonschema4springboot.ValidateJsonSchemaVersion;
 import lombok.AllArgsConstructor;
 
 /**
@@ -28,4 +36,23 @@ public class DeviceResource {
 
     private DeviceService deviceService;
 
+    @GetMapping("/v1/device/{deviceId}")
+    public DeviceResponse getDevice(@RequestParam("deviceId") String deviceId) {
+        return DeviceRecordMapper.INSTANCE.toDeviceResponse(deviceService.getDevice(deviceId));
+    }
+
+    @PutMapping("/v1/device/{deviceId}/activate")
+    public DeviceResponse activateDevice(@RequestParam("deviceAlias") String deviceId,
+            @ValidateJsonSchema(version = ValidateJsonSchemaVersion.V7,
+                    schemaPath = "classpath:schema/activateDevice.json") ActivateRequest request) {
+        return DeviceRecordMapper.INSTANCE.toDeviceResponse(deviceService.activateDevice(deviceId));
+    }
+
+    @PutMapping("/v1/device/{deviceId}/deactivate")
+    public DeviceResponse deactivateDevice(@RequestParam("deviceAlias") String deviceId,
+            @ValidateJsonSchema(version = ValidateJsonSchemaVersion.V7,
+                    schemaPath = "classpath:schema/deactivateDevice.json") ActivateRequest request) {
+        return DeviceRecordMapper.INSTANCE
+                .toDeviceResponse(deviceService.deactivateDevice(deviceId));
+    }
 }
