# src/main/java/com/unitvectory/devicekeyregistry/controller/PendingDevicesResource.java
@@ -13,7 +13,12 @@
  */
 package com.unitvectory.devicekeyregistry.controller;
 
+import java.util.List;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
+import com.unitvectory.devicekeyregistry.mapper.DeviceRecordMapper;
+import com.unitvectory.devicekeyregistry.model.DeviceRecord;
+import com.unitvectory.devicekeyregistry.model.DevicesResponse;
 import com.unitvectory.devicekeyregistry.service.DeviceService;
 import lombok.AllArgsConstructor;
 
@@ -28,6 +33,11 @@ public class PendingDevicesResource {
 
     private DeviceService deviceService;
 
-
+    @GetMapping("/v1/pending")
+    public DevicesResponse getPendingDevices() {
+        List<DeviceRecord> records = this.deviceService.getPendingDevices();
+        return DevicesResponse.builder()
+                .devices(DeviceRecordMapper.INSTANCE.toDeviceResponseList(records)).build();
+    }
 }
 
